--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>Portfolio</title>
-    <%= csrf_meta_tags %>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> 
+
+    <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'reset', 'application', 'button_transform', 'selfie_transform', 'sample_transform', '//fonts.googleapis.com/css?family=Permanent+Marker', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
