--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="column">
+<div class="column" id="home_page">
   <div id="intro" class="left_pane">
     <h1 id="john_marks">John Marks, Web Developer.</h1>
     <p>I would love to help create your website or application.</p>
