--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -637,8 +637,6 @@ li.selected {
     margin: 0 auto !important;
   }
 
-  #skills_left_pane h1 { font-size: 3.4em !important; }
-
   #headline1 {
     margin-right: 0px !important;
     margin-bottom: 5px !important;
@@ -757,9 +755,7 @@ li.selected {
     margin-left: 12px !important;
   }
 
-  .navbar ul {
-    display: none;
-  }
+  .navbar ul { display: none; }
 
   #home_page p { font-size: 11.5px; }
 
@@ -811,7 +807,7 @@ li.selected {
   }
 
   #skills_container {
-    top: 9%;
+    top: 8%;
     width: 80%;
     height: 100%;
     display: flex;
@@ -822,19 +818,22 @@ li.selected {
 
   #skills_left_pane, #headline2, #headline1, #ampersand, #skills_left_pane .line { margin: 0 !important; }
 
-  #skills_left_pane { top: 9% !important; }
+  #skills_left_pane { 
+    top: 15% !important;
+    width: 100% !important;
+  }
 
-  #skills_right_pane { top: 13.5% !important; }
+  #skills_right_pane { 
+    top: 19.5% !important;
+    width: 100% !important;
+    margin-bottom: 40px;
+  }
 
-  #skills_left_pane { width: 100% !important; }
-
-  #skills_left_pane .line { margin-bottom: 10px !important; }
+  #skills_left_pane .line { margin-bottom: 15px !important; }
 
   #headline2 { margin-bottom: 36px !important; }
 
   #ampersand { float: none !important; }
-
-  #skills_right_pane { width: 100% !important; }
 
   #skills_left_pane ul { justify-content: space-between; }
 
@@ -844,9 +843,7 @@ li.selected {
     left: 10px !important;
   }
 
-  #my_work_page {
-    top: 60px;
-  }
+  #my_work_page { top: 60px; }
 
   .sample_containers {
     width: 100% !important;
@@ -865,9 +862,7 @@ li.selected {
     transform: translateX(-50%);
   }
 
-  #contact_form {
-    float: none;
-  }
+  #contact_form { float: none; }
 
   #contact_form input[type=text], input[type=email], textarea  {
     width: 100% !important;
