--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -695,9 +695,9 @@ li.selected {
   }
 }
 
-@media only screen and (min-width: 376px) and (max-height: 820px) {
+@media only screen and (min-width: 376px) and (max-width: 415px) and (max-height: 820px) {
 
-  #home_page p { font-size: 10px !important; }
+  #home_page p { font-size: 11.5px !important; }
 
   #skills_right_pane { top: 20% !important; }
 }
