--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -406,10 +406,10 @@ li.selected {
 
 #contact_left_pane {
   position: absolute;
-  top: 30px;
+  top: 9.4%;
   left: 10.625%;
   width: 646px;
-  height: 100%;
+  height: 90%;
   display: flex;
   flex-flow: column;
   justify-content: center;
