--- a/app/assets/stylesheets/selfie_transform.scss
+++ b/app/assets/stylesheets/selfie_transform.scss
@@ -40,7 +40,7 @@
   background-color: white;
   padding: 10.5px;
   padding-top: 13.5px;
-  padding-bottom: 0;
+  padding-bottom: 51.04px !important;
 }
 
 #selfie:hover {
@@ -51,7 +51,7 @@
   z-index: 5;
 }
 
-#selfie:hover + #selfie_caption {
+#selfie:hover + #selfie_caption, #selfie:active + #selfie_caption {
   -webkit-transform: scale(1.251, 1.179) translate(3px, 24.3px);
   -o-transform: scale(1.251, 1.179) translate(3px, 24.3px);
   -moz-transform: scale(1.251, 1.179) translate(3px, 24.3px);
@@ -66,16 +66,17 @@
 #selfie_caption {
   order: 2;
   position: absolute;
-  right: 0.35%;
-  top: 99%;
+  top: 100%;
+  left: 17.93px;
+  width: 200px;
+  height: 50px;
   text-decoration: none !important;
   font-family: "Permanent Marker";
   font-style: normal;
   font-variant: normal;
   font-weight: 400;
-  line-height: 20px;
+  line-height: 16.25px;
   font-size: 20px;
-  width: 245.5px;
   color: black;
   -webkit-transform: rotate(2deg);
   -moz-transform: rotate(2deg);
