--- a/app/assets/stylesheets/sample_transform.scss
+++ b/app/assets/stylesheets/sample_transform.scss
@@ -24,15 +24,17 @@
   visibility: hidden;
   display: block;
   margin: 0 auto;
-  background: rgb(237, 93, 31); 
+  opacity: 0;
+  background: url(circle.png) no-repeat center;
   border-radius: 100%;
+  transform: scale(0.2);    
   -webkit-transition: all 150ms ease-out;
-  transition: all 150ms ease-out;
-  transform: scale(0.2);        
+  transition: all 150ms ease-out;    
 }
 
 .sample_containers:hover .sample_description {
   visibility: visible;
+  opacity: 1;
   -webkit-transform: scale(10, 10);
   transform: scale(10, 10);
 }
@@ -52,7 +54,7 @@
   text-align: center;
   line-height: 0px;
   -webkit-transition: all 150ms ease-out;
-  transition: all 150ms ease-out;
+  transition: all 100ms ease-out;
   bottom: 58.5%;
   -webkit-transform: translateY(58.5%) scale(0.2);
   transform: translateY(58.5%) scale(0.2);
@@ -68,3 +70,7 @@
   -webkit-transform: scale(1.95, 2);
   transform: scale(1.95, 2);
 }
+
+#sample_containers1 .sample_text p { opacity: 0 !important; }
+
+#sample_containers1:hover .sample_text p { opacity: 1 !important; }
