--- a/app/assets/stylesheets/sample_transform.scss
+++ b/app/assets/stylesheets/sample_transform.scss
@@ -18,59 +18,24 @@
 .sample_description {
   overflow: hidden;
   position: relative;
-  bottom: 53.0659%;
-  width: 1em;
-  height: 1em;
+  bottom: 82.14%;
+  width: 120px;
+  height: 230px;
   visibility: hidden;
   display: block;
   margin: 0 auto;
   opacity: 0;
   background: url(circle.png) no-repeat center;
-  border-radius: 100%;
-  transform: scale(0.2);    
+  -webkit-transform: scale(0.2);
+  transform: scale(0.2);
   -webkit-transition: all 150ms ease-in-out;
-  transition: all 150ms ease-in-out;    
+  transition: all 150ms ease-in-out;
+  background-position: 0 0px; 
 }
 
 .sample_containers:hover .sample_description {
   visibility: visible;
   opacity: 1;
-  -webkit-transform: scale(10, 10);
-  transform: scale(10, 10);
+  -webkit-transform: scale(0.8);
+  transform: scale(0.8);
 }
-
-.sample_text, .sample_text:hover, .sample_text:active, 
-.sample_text:visited, .sample_text:link {
-  visibility: hidden;
-  position: relative;
-  left: 2px;
-  width: 240px;
-  display: block;
-  margin: 0 auto;
-  font-size: 5.5px;
-  font-family: Montserrat, Tahoma;       
-  font-weight: normal;
-  text-decoration: none;
-  text-align: center;
-  line-height: 0px;
-  -webkit-transition: all 100ms ease-in-out;
-  transition: all 100ms ease-in-out;
-  bottom: 58.5%;
-  -webkit-transform: translateY(58.5%) scale(0.2);
-  transform: translateY(58.5%) scale(0.2);
-}
-
-.sample_text p { 
-  color: #000000;
-  letter-spacing: 3px;
-}
-
-.sample_containers:hover .sample_text {
-  visibility: visible;
-  -webkit-transform: scale(1.95, 2);
-  transform: scale(1.95, 2);
-}
-
-#sample_containers1 .sample_text p { opacity: 0 !important; }
-
-#sample_containers1:hover .sample_text p { opacity: 1 !important; }
