Make about_page top positioning work on firefox

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -220,8 +220,8 @@ ul a {
   position: absolute !important;
   margin: 7.5px 0;
   line-height: 20px;
-  -webkit-transform: none !important;
-  transform: none !important;
+  -webkit-transform: none;
+  transform: none;
 }
 
 #skills_right_pane {
