--- a/app/assets/stylesheets/selfie_transform.scss
+++ b/app/assets/stylesheets/selfie_transform.scss
@@ -16,7 +16,7 @@
   object-fit: cover;
   box-sizing: content-box;
   height: 175.5px;
-  width: 225px;
+  width: 224px;
   background-color: white;
   padding: 10.5px;
   padding-top: 13.5px;
@@ -45,17 +45,17 @@
 
 #selfie:hover {
   position: relative;
-  -webkit-transform: scale(1.25);
-  -moz-transform: scale(1.25);
-  transform: scale(1.25);
+  -webkit-transform: scale(1.25) translateX(-3%);
+  -moz-transform: scale(1.25) translateX(-3%);
+  transform: scale(1.25) translateX(-3%);
   z-index: 5;
 }
 
 #selfie:hover + #selfie_caption, #selfie:active + #selfie_caption {
-  -webkit-transform: scale(1.251, 1.179) translate(3px, 24.3px);
-  -o-transform: scale(1.251, 1.179) translate(3px, 24.3px);
-  -moz-transform: scale(1.251, 1.179) translate(3px, 24.3px);
-  transform: scale(1.251, 1.179) translate(3px, 24.3px);
+  -webkit-transform: scale(1.251, 1.179) translate(-2%, 24.3px);
+  -o-transform: scale(1.251, 1.179) translate(-2%, 24.3px);
+  -moz-transform: scale(1.251, 1.179) translate(-2%, 24.3px);
+  transform: scale(1.251, 1.179) translate(-2%, 24.3px);
   transition: all .15s ease-in-out;
   -webkit-transition: -webkit-transform .15s linear;
   -moz-transition: all .15s ease-in-out;
@@ -88,4 +88,5 @@
   padding: 16.25px;
   background-color: white;
   text-align: center;
+  z-index: 9;
 }
