--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -71,7 +71,7 @@ p {
 
 .navbar #logo {
   width: 59px;
-  height: 110.88px; /*80.88px;*/
+  height: 110.88px;
   margin: 0 auto;
   position: relative;
   font-size: 25px;
