Change font family

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,7 +36,7 @@ html, body {
 
 h1, p {
   text-align: center;
-  font-family: sans-serif, "Montserrat", "Tahoma";
+  font-family: "Tahoma", "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
